fixed issues with composer package
